# fbe-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  FBE_COMPREHENSIVE_TEST_REPORT.md  FBE_SPEC_COMPLIANCE.md  LICENSE  README.md
examples/: cross_struct.rs  cross_test.rs
fbec/: Cargo.toml
fbec/src/: main.rs
src/: address.rs  buffer.rs  defaults.rs  field_model.rs  field_model_collections.rs  final_model.rs  inheritance.rs  keys.rs  lib.rs  model.rs  model_final.rs  receiver.rs  sender.rs  user_with_address.rs
test/: mod.rs  side.rs  user.rs
test_gen/: account.rs  balance.rs  mod.rs  order.rs  order_side.rs  order_type.rs  state.rs
tests/: cross_platform_collections.rs  cross_platform_collections_v2.rs  cross_platform_types.rs  cross_platform_vector.rs  test_array.rs  test_binary_compat.rs  test_defaults_cross.rs  test_enum.rs  test_fbe_comprehensive.rs  test_fbe_order_spec.rs  test_field_model.rs  test_field_model_collections.rs  test_flags.rs  test_float_collections.rs  test_inheritance_cross.rs  test_keys_cross.rs  test_map.rs  test_model_cross.rs  test_nested_struct.rs  test_optional.rs  test_optional_cross.rs  test_optional_models.rs  test_string_collections.rs  test_types.rs  test_vector.rs
