[package]
name = "fbe-rust"
version = "0.1.1"
edition = "2021"
authors = ["Panilux Team"]
description = "Fast Binary Encoding (FBE) for Rust - High-performance, zero-copy binary serialization with 100% FBE specification alignment"
license = "MIT"
repository = "https://github.com/panilux/fbe-rust"
keywords = ["fbe", "serialization", "binary", "encoding", "protocol"]
categories = ["encoding", "data-structures"]
readme = "README.md"
homepage = "https://github.com/panilux/fbe-rust"
documentation = "https://docs.rs/fbe-rust"

[dependencies]

[dev-dependencies]
hex = "0.4.3"
